<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/et_contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/contact_name"
        android:importantForAutofill="yes"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_contact_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/phone_number"
        android:importantForAutofill="yes"
        android:inputType="phone"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn_save_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_contact"
        android:layout_marginTop="24dp" />
</LinearLayout>
