<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardElevation="4dp"
    card_view:cardCornerRadius="8dp">

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewName"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/textViewPhone"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/buttonRemove"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/remove_contact"
            android:src="@android:drawable/ic_delete"
            card_view:tint="@android:color/holo_red_dark" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
